# lucid

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  package-lock.json  package.json  second-brain-project.md  viewer.html  vite.viewer.config.ts
.claude/: settings.json
.github/workflows/: pages.yml  release.yml
docs/: architecture-bulles-scalable.md  checklist-features.md  mcp-distant.md  supabase-mcp-personal.sql  supabase-mcp-proposals-realtime.sql  supabase-mcp-proposals-v2.sql  supabase-mcp-proposals.sql  supabase-setup.sql  supabase-shared-spaces-v2.sql  supabase-shared-spaces.sql  supabase-sync.sql
scripts/: bundle-sidecars.ps1  bundle-sidecars.sh  measure-mcp-token-savings.ts  release.sh
site/: index.html
site/s/: index.html
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: archivist.rs  brain.rs  scan.rs  seed_note.rs
src-tauri/src/: archivist.rs  backup.rs  lib.rs  mcp_clients.rs  models.rs  secrets.rs  storage.rs
src-tauri/src/ai/: brain_md.rs  llama.rs  mod.rs  pipeline.rs
src-tauri/src/connectors/: apple_notes.rs  chatgpt.rs  claude_ai.rs  claude_code.rs  google_drive.rs  local_folder.rs  mod.rs  notion.rs  obsidian.rs
src/components/: AiDraft.tsx  AiStatusBar.tsx  AuthGate.tsx  BetaBadge.tsx  BrainMap.tsx  BrainView.tsx  CommandPalette.tsx  ConversationDetail.tsx  FolderView.tsx  LeftSidebar.tsx  MarkdownEditor.tsx  McpConnectGuide.tsx  NeuralBg.tsx  NodeDetail.tsx  NodePicker.tsx  Onboarding.tsx  (+10 more)
(+20 files in other folders)
