[package]
name = "brainlink"
version = "0.1.0"
description = "Second Brain — connecte tes outils IA et génère un second cerveau structuré, 100% local."
authors = ["Liam Legaillard"]
edition = "2021"
# Deux binaires (app + lucid_mcp) : `cargo run`/tauri dev doivent viser l'app.
default-run = "brainlink"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "brainlink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }

